src/test/resources/entity_test/invalid/Employee1.entity
// no { } 
// Unexpected char(s) after entity name (line 4)
Employee1 
    id : integer {@Id};  